namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gestion-proyectos
  labels:
    app: gestion-proyectos
